# royal-escape-backend

./: .env.example  Dockerfile  README.md  admin_test_script.py  docker-compose.yml  poatman_payments_collection.json  postma_pots_collection.json  postman_auth_collection.json  postman_user_collection.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
app/: main.py
app/api/: deps.py  router.py
app/core/: config.py  database.py  hashing.py  redis.py  security.py
app/modules/payment/: routes.py  schemas.py  service.py
app/modules/pots/: collections.py  enums.py  models.py  routes.py  schemas.py  service.py
app/modules/user/: collections.py  models.py  otp_service.py  routes.py  schemas.py  service.py
app/utils/: mongo.py  otp.py
